@@ -6,6 +6,9 @@ target_type = "native"
 src = { "defrag_native.c", "script.c", "commands.c", "udefrag.c" }
 rc = { "defrag_native.rc" }
 
+-- list of directories containing headers the program relies on
+includes = { "include", "native", "udefrag", "zenwinx" }
+
 libs = { "ntdll" }
 adlibs = { 
     "$(UDEFRAG_LIB_PATH)\\zenwinx",
